templates/petset_template.yaml
---
# Source: petset/templates/webhook-server/monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-petset
  namespace: default
  labels:
    helm.sh/chart: petset-v2024.2.11
    app.kubernetes.io/name: petset
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.5"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: webhook-server
    app.kubernetes.io/name: petset
    app.kubernetes.io/instance: release-name
---
# Source: petset/templates/webhook-server/webhook_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-petset-webhook
  namespace: default
  labels:
    helm.sh/chart: petset-v2024.2.11
    app.kubernetes.io/name: petset
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.5"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/component: webhook-server
    app.kubernetes.io/name: petset
    app.kubernetes.io/instance: release-name
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
---
# Source: petset/templates/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-petset-operator
  namespace: default
  labels:
    app.kubernetes.io/component: operator
    helm.sh/chart: petset-v2024.2.11
    app.kubernetes.io/name: petset
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.5"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: operator
      app.kubernetes.io/name: petset
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/component: operator
        app.kubernetes.io/name: petset
        app.kubernetes.io/instance: release-name
      annotations:
    spec:
      
      serviceAccountName: release-name-petset
      containers:
      - name: operator
        image: "ghcr.io/appscode/petset:v0.0.5"
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
        args:
          - operator
        resources:
          requests:
            cpu: 100m
      securityContext:
        fsGroup: 65535
      nodeSelector:
        kubernetes.io/os: linux
---
# Source: petset/templates/webhook-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-petset-webhook-server
  namespace: default
  labels:
    app.kubernetes.io/component: webhook-server
    helm.sh/chart: petset-v2024.2.11
    app.kubernetes.io/name: petset
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.5"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: webhook-server
      app.kubernetes.io/name: petset
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/component: webhook-server
        app.kubernetes.io/name: petset
        app.kubernetes.io/instance: release-name
      annotations:
        checksum/apiregistration.yaml: 65caca6e8a20ba699979705e83534bb5629a34420eef5c5c8f66233c5c57a6c7
    spec:
      
      serviceAccountName: release-name-petset
      containers:
      - name: webhook-server
        image: "ghcr.io/appscode/petset:v0.0.5"
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
        args:
          - webhook
          - --webhook-name=release-name-petset
        ports:
        - name: webhook-server
          containerPort: 9443
          protocol: TCP
        resources:
          requests:
            cpu: 100m
        volumeMounts:
        - name: serving-cert
          mountPath: /var/serving-cert
          readOnly: true
      - name: kube-rbac-proxy
        image: "ghcr.io/appscode/kube-rbac-proxy:v0.11.0"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
        args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=10
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        resources:
          requests:
            cpu: 100m
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: release-name-petset-webhook-cert
      securityContext:
        fsGroup: 65535
      nodeSelector:
        kubernetes.io/os: linux
---
# Source: petset/templates/webhook-server/mutating_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-petset
  labels:
    helm.sh/chart: petset-v2024.2.11
    app.kubernetes.io/name: petset
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.5"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-petset-webhook
        namespace: default
        path: /mutate-apps-k8s-appscode-com-v1-petset
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: petsets.apps.k8s.appscode.com
    rules:
      - apiGroups:
          - apps.k8s.appscode.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - petsets
    sideEffects: None
---
# Source: petset/templates/webhook-server/validating_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-name-petset
  labels:
    helm.sh/chart: petset-v2024.2.11
    app.kubernetes.io/name: petset
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.5"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-petset-webhook
        namespace: default
        path: /validate-apps-k8s-appscode-com-v1-petset
      caBundle: bm90LWNhLWNlcnQ=
    failurePolicy: Fail
    name: petsets.apps.k8s.appscode.com
    rules:
      - apiGroups:
          - apps.k8s.appscode.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - petsets
    sideEffects: None
